--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, fuga
+      necessitatibus. Est deserunt ducimus nihil recusandae nam, dolores soluta
+      nostrum dignissimos ullam molestiae, earum quo ipsum, veritatis corrupti.
+      Repellat, alias?
+    </p>
+  </body>
 </html>
